<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appnilai_mahasiswa"
        android:textStyle="bold"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:paddingTop="10dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edt_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:paddingTop="5dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/tv_hdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nilai_kehadiran"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edt_hdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/tv_tgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nilai_tugas"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edt_tgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/tv_uts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nilai_uts"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edt_uts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/tv_uas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nilai_uas"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edt_uas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung"
        />
    <TextView
        android:id="@+id/tv_resultnim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nimresult"
        />
    <TextView
        android:id="@+id/tv_resultnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/namaresult"
        />
    <TextView
        android:id="@+id/tv_resulthdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n_kehadiranresult"
        />
    <TextView
        android:id="@+id/tv_resulttgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n_tugasresult"
        />
    <TextView
        android:id="@+id/tv_resultuts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n_utsresult"
        />
    <TextView
        android:id="@+id/tv_resultuas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n_uasresult"
        />

    <TextView
        android:id="@+id/tv_resultakhr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n_akhirresult"
        />

    <TextView
        android:id="@+id/tv_resultmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/muturesult"
        />
    <TextView
        android:id="@+id/tv_resultpdkt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/predikatresult"
        />


</LinearLayout>